--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ ignore =
 
 per-file-ignores =
   # it is possibble to have prints in scripts
-  python-project-lvl2/*.py: WPS421, WPS421, WPS122, S311, WPS408, DAR202, WPS420, WPS305, D103, D104, D100, WPS237, WPS111, WPS210, WPS110, WPS453, Q000, WPS221
+  gendiff/*.py: WPS421, WPS421, WPS122, S311, WPS408, DAR202, WPS420, WPS305, D103, D104, D100, WPS237, WPS111, WPS210, WPS110, WPS453, Q000, WPS221
 
 [tool:pytest]
 norecursedirs = __pycache__
