--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ ignore =
 per-file-ignores =
   # it is possibble to have prints in scripts
   gendiff/*.py: WPS421, WPS421, WPS122, S311, WPS408, DAR202, WPS420, WPS305, D103, D104, D100, WPS237, WPS111, WPS210, WPS110, WPS453, Q000, WPS221
+  gendiff/*.py: W292, WPS407, C812, WPS125, WPS319, WPS336, WPS231, WPS125, WPS336, I003, WPS331, WPS515, E302, WPS226
 
 [tool:pytest]
 norecursedirs = __pycache__
