--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ ignore =
 
 per-file-ignores =
   # it is possibble to have prints in scripts
-  gendiff/*.py: WPS421, C901,  WPS430, WPS421, WPS122, S311, WPS408, DAR202, WPS420, WPS305, D103, D104, D100, WPS232, WPS237, WPS111, WPS210, WPS110, WPS453, Q000, WPS221, WPS407, C812, WPS125, WPS319, WPS336, WPS231, WPS125, WPS336, I003, WPS331, WPS515, E302, WPS226, WPS412, WPS410, WPS323, WPS317, WPS318, E501, WPS529, WPS347, I001, S506
+  gendiff/*.py: WPS421, C901,  WPS430, P101, E111, WPS421, WPS122, S311, WPS408, DAR202, WPS420, WPS305, D103, D104, D100, WPS232, WPS237, WPS111, WPS210, WPS110, WPS453, Q000, WPS221, WPS407, C812, WPS125, WPS319, WPS336, WPS231, WPS125, WPS336, I003, WPS331, WPS515, E302, WPS226, WPS412, WPS410, WPS323, WPS317, WPS318, E501, WPS529, WPS347, I001, S506
 
 [tool:pytest]
 norecursedirs = __pycache__
