--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,3 +18,12 @@ jobs:
       - name: Run linter
         run: |
           make lint
+      - name: Run Tests
+        run: |
+          make test
+      - name:  Coverage report
+        uses: paambaati/codeclimate-action@v2.7.5
+        env:
+          CC_TEST_REPORTER_ID: code_from_codeclimate
+        with:
+          coverageCommand: make coverage
