--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,6 +24,6 @@ jobs:
       - name:  Coverage report
         uses: paambaati/codeclimate-action@v2.7.5
         env:
-          CC_TEST_REPORTER_ID: code_from_codeclimate
+          CC_TEST_REPORTER_ID: 4937d3925d4abc4bfc1f5e8e2d5ddb10501f331ae05781e5e0d8d141b2d96be5
         with:
           coverageCommand: make coverage
