--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,13 @@ gendiff = "gendiff.scripts.gendiff:main"
 [tool.poetry.dependencies]
 python = "^3.8"
 pyyml = "^0.0.2"
+coverage = "^6.1.2"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.7"
 pytest = "^6.2.3"
-pytest-cov = "^2.11.1"
 wemake-python-styleguide = "^0.15.2"
+coverage = "^6.1.2"
 
 
 [build-system]
